Fix spacing in quote section

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,17 @@
     font-size: 36px;
     font-weight: light;
     font-style: italic;
-    padding: 32px;
+    padding: 108px;
+    padding-bottom: 20px;
+}
+
+#author {
+    color:#1F2937;
+    font-weight: bold;
+    font-size: 28px;
+    text-align: right;
+    padding-right: 108px;
+    padding-bottom: 108px;
 }
 
 ul {
